tests/negative/neg_pr1162_removed_named_exit.safe
package neg_pr1162_removed_named_exit

   function build returns integer

      loop
         exit Outer;
      return 0;
